[tool.poetry]
name = "fflogsbattleanalyzebot"
version = "0.1.0"
description = ""
authors = ["Roy <royroy.euph@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
bs4 = "^0.0.1"
selenium = "^3.141.0"
tqdm = "^4.46.0"
"discord.py" = "^1.3.3"
webdriverdownloader = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
